--- a/gallery.html
+++ b/gallery.html
@@ -62,15 +62,15 @@
         const albums = [
             {
                 title: "Timeless Memories",
-                photos: ["ALBUMS/album1.0.jpg", "ALBUMS/album1.1.jpg", "ALBUMS/album1.2.jpg", "ALBUMS/album1.3.jpg"]
+                photos: ["album1.0.jpg", "album1.1.jpg", "album1.2.jpg", "album1.3.jpg"]
             },
             {
                 title: "Love & Emotions",
-                photos: ["ALBUMS/album2.0.jpg", "ALBUMS/album2.1.jpg", "ALBUMS/album2.2.jpg", "ALBUMS/album2.3.jpg"]
+                photos: ["album2.0.jpg", "album2.1.jpg", "album2.2.jpg", "album2.3.jpg"]
             },
             {
                 title: "Moments Made Eternal",
-                photos: ["ALBUMS/album3.0.jpg", "ALBUMS/album3.1.jpg", "ALBUMS/album3.2.jpg", "ALBUMS/album3.3.jpg"]
+                photos: ["album3.0.jpg", "album3.1.jpg", "album3.2.jpg", "album3.3.jpg"]
             }
         ];
         let currentAlbumIndex = 0;
@@ -111,4 +111,5 @@
         }
     </script>
 </body>
+
 </html>
